# word-search

./: Cargo.toml  README.md
data/: preferences.json
src/: config.rs  gui.rs  img.rs  main.rs  pdf.rs  request.rs  word_list.rs  word_search.rs
src/gui/: mod.rs  styling.rs
