[package]
name = "wordsearch"
version = "0.1.0"
authors = ["slogemann1 <sllogemann1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
pdf-canvas = "0.6.0"
iced = { version = "0.2.0", features = ["tokio"] }
chrono = "0.4"